Updated spinner. Fixed toast presentation to show on mobile. Removed state from contact if success.

--- a/JosephHungerman.UI/wwwroot/css/app.css
+++ b/JosephHungerman.UI/wwwroot/css/app.css
@@ -87,3 +87,9 @@ a, .btn-link {
     background-position: center;
     display: flex;
 }
+
+@media (max-width: 768px) {
+    .loading-spinner {
+        background-size: contain;
+    }
+}
